--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ ignore = ["B905","D107","D213","D211","E741","S101","UP006","SIM116","D203"]
 [tool.pytest.ini_options]
 filterwarnings = [
     'ignore:Gimbal lock:UserWarning',
+    'ignore:.*scipy\.special\.sph_harm.*deprecated.*:DeprecationWarning',
 ]
 
 [tool.scikit-build]
