--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -56,8 +56,10 @@ jobs:
         run: |
           $ErrorActionPreference = 'Continue'
           $PSNativeCommandUseErrorActionPreference = $false
-          pytest tests/test_pgop.py -v --pg-first --skip-boosop --junitxml=pytest-report.xml
-          $code = $LASTEXITCODE
+          $args = @('-m','pytest','tests/test_pgop.py','-v','--pg-first','--skip-boosop','--junitxml=pytest-report.xml')
+          $p = Start-Process -FilePath python -ArgumentList $args -NoNewWindow -PassThru -Wait
+          $code = $p.ExitCode
+          Write-Host ("pytest exit code: {0}" -f $code)
 
           if ($code -eq 0) { exit 0 }
 
