Remove from src/*.cc

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 list(APPEND spatula_sources
     "export-module.cc"
+    "export-spatula.h" "export-spatula.cc"
     "BondOrder.h" "BondOrder.cc"
     "PGOP.h" "PGOP.cc"
     "BOOSOP.h" "BOOSOP.cc"
