--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,4 @@ find_package(nanobind CONFIG REQUIRED)
 include_directories(${PROJECT_SOURCE_DIR}/dependencies)
 add_subdirectory(src)
 add_subdirectory(spatula)
+add_subdirectory(src/nanobind)
