--- a/src/nanobind/CMakeLists.txt
+++ b/src/nanobind/CMakeLists.txt
@@ -1,4 +1,9 @@
-nanobind_add_module(_spatula_nb export.cc)
+nanobind_add_module(_spatula_nb
+    export.cc
+    export-threads.cc
+)
+
+target_include_directories(_spatula_nb PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../util)
 
 set_target_properties(_spatula_nb PROPERTIES
     CXX_STANDARD 17
