--- a/src/nanobind/CMakeLists.txt
+++ b/src/nanobind/CMakeLists.txt
@@ -2,10 +2,12 @@ nanobind_add_module(_spatula_nb
     export.cc
     export-threads.cc
     export_optimize.cc
+    export-quaternion.cc
 )
 
 target_include_directories(_spatula_nb PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../util)
 target_include_directories(_spatula_nb PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../optimize)
+target_include_directories(_spatula_nb PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../data)
 
 set_target_properties(_spatula_nb PROPERTIES
     CXX_STANDARD 17
