--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,8 @@ list(APPEND spatula_sources
     "PGOP.h" "PGOP.cc"
     "BOOSOP.h" "BOOSOP.cc"
     "data/Vec3.h"
-    "data/Quaternion.h" "data/Quaternion.cc"
+    "data/Quaternion.h"
+    "data/export-quaternion.cc"
     "optimize/Optimize.h" "optimize/Optimize.cc"
     "optimize/RandomSearch.h" "optimize/RandomSearch.cc"
     "optimize/StepGradientDescent.h" "optimize/StepGradientDescent.cc"
