Quaternion compile and run

--- a/src/nanobind/CMakeLists.txt
+++ b/src/nanobind/CMakeLists.txt
@@ -1,6 +1,7 @@
 nanobind_add_module(_spatula_nb
     export.cc
     export-threads.cc
+    export-quat.cc
 )
 
 target_include_directories(_spatula_nb PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../util)
