Quaternion and vec -> header only

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,8 +3,8 @@ list(APPEND spatula_sources
     "BondOrder.h"
     "PGOP.h" "PGOP.cc"
     "BOOSOP.h" "BOOSOP.cc"
-    "data/Vec3.h" "data/Vec3.cc"
-    "data/Quaternion.h" "data/Quaternion.cc"
+    "data/Vec3.h"
+    "data/Quaternion.h"
     "optimize/Optimize.h" "optimize/Optimize.cc"
     "optimize/RandomSearch.h" "optimize/RandomSearch.cc"
     "optimize/StepGradientDescent.h" "optimize/StepGradientDescent.cc"
