Make optimizers header-only

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,13 +5,13 @@ list(APPEND spatula_sources
     "BOOSOP.h" "BOOSOP.cc"
     "data/Vec3.h"
     "data/Quaternion.h"
-    "optimize/Optimize.h" "optimize/Optimize.cc"
-    "optimize/RandomSearch.h" "optimize/RandomSearch.cc"
-    "optimize/StepGradientDescent.h" "optimize/StepGradientDescent.cc"
-    "optimize/NoOptimization.h" "optimize/NoOptimization.cc"
-    "optimize/Mesh.h" "optimize/Mesh.cc"
-    "optimize/Union.h" "optimize/Union.cc"
-    "optimize/export_optimize.h" "optimize/export_optimize.cc"
+    "optimize/Optimize.h"
+    "optimize/RandomSearch.h"
+    "optimize/StepGradientDescent.h"
+    "optimize/NoOptimization.h"
+    "optimize/Mesh.h"
+    "optimize/Union.h"
+    "optimize/export_optimize.h"
     "util/Metrics.h"
     "util/Util.h"
     "util/QlmEval.h" "util/QlmEval.cc"
