--- a/src/nanobind/CMakeLists.txt
+++ b/src/nanobind/CMakeLists.txt
@@ -1,9 +1,17 @@
 nanobind_add_module(_spatula_nb
     export.cc
     export-threads.cc
+    ../PGOP.cc
 )
 
-target_include_directories(_spatula_nb PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../util ${CMAKE_CURRENT_SOURCE_DIR}/../data ${CMAKE_CURRENT_SOURCE_DIR}/../optimize)
+target_include_directories(
+    _spatula_nb
+    PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/../util
+    ${CMAKE_CURRENT_SOURCE_DIR}/../data
+    ${CMAKE_CURRENT_SOURCE_DIR}/../optimize
+    ${CMAKE_CURRENT_SOURCE_DIR}/..
+)
 
 set_target_properties(_spatula_nb PROPERTIES
     CXX_STANDARD 17
