[WIP] Nanobind restructure

--- a/src/nanobind/CMakeLists.txt
+++ b/src/nanobind/CMakeLists.txt
@@ -1,7 +1,8 @@
 nanobind_add_module(_spatula_nb
     export.cc
     export-threads.cc
-    
+    export-boosop.cc
+    ../BOOSOP.cc
     ../PGOP.cc
 )
 
