--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -17,7 +17,7 @@ on:
 
 jobs:
   build_wheels:
-    name: Build wheels [${{ matrix.python.python-version }}, ${{ matrix.os.base }}-${{ matrix.os.arch }}]
+    name: Build wheels [${{ matrix.python.version }}, ${{ matrix.os.base }}-${{ matrix.os.arch }}]
     runs-on: ${{ matrix.os.base }}-${{ matrix.os.version }}
     strategy:
       fail-fast: false
@@ -34,39 +34,30 @@ jobs:
           arch: 'arm64'
 
         python:
-        - python-version: '3.10'
-          cibw-version: 'cp310'
+        - version: 'cp310'
           oldest_numpy: '2.0.0'
-        - python-version: '3.11'
-          cibw-version: 'cp311'
+        - version: 'cp311'
           oldest_numpy: '2.0.0'
-        - python-version: '3.12'
-          cibw-version: 'cp312'
+        - version: 'cp312'
           oldest_numpy: '2.0.0'
-        - python-version: '3.13'
-          cibw-version: 'cp313'
+        - version: 'cp313'
           oldest_numpy: '2.1.1'
-        - python-version: '3.14'
-          cibw-version: 'cp314'
+        - version: 'cp314'
           oldest_numpy: '2.3.3'
 
     steps:
       - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
 
-      - name: Set up Python
-        uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6.0.0
-        with:
-          python-version: ${{ matrix.python.python-version }}
-
       - name: Build wheels
         uses: pypa/cibuildwheel@63fd63b352a9a8bdcc24791c9dbee952ee9a8abc # v3.3.0
         env:
-          CIBW_BUILD: "${{ matrix.python.cibw-version }}-*"
+          CIBW_BUILD: "${{ matrix.python.version }}-*"
           CIBW_TEST_REQUIRES: pytest==8.4.2 numpy==${{ matrix.python.oldest_numpy }} pytest-rerunfailures==16.0.1 coxeter==0.10.0
+          CIBW_BEFORE_BUILD_LINUX: "apt-get update && apt-get install -y python$(python -c 'import sys; print(f\"{sys.version_info.major}.{sys.version_info.minor}\")')-dev"
 
       - uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4 # v5.0.0
         with:
-          name: dist-python-${{ matrix.python.cibw-version }}-${{ matrix.os.base }}-${{ matrix.os.arch }}
+          name: dist-python-${{ matrix.python.version }}-${{ matrix.os.base }}-${{ matrix.os.arch }}
           path: ./wheelhouse/*.whl
 
   build_sdist:
