--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ add_subdirectory(src/nanobind)
 option(ENABLE_PROFILING "Enable profiling support" OFF)
 
 if(ENABLE_PROFILING)
-    message(STATUS "ENABLE_PROFILING is ON. Adding -pg to compiler and linker flags.")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
+    message(STATUS "ENABLE_PROFILING is ON. Adding -g to compiler and linker flags.")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -g")
 endif()
