--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Build and Install
         run: |
           uv pip install . --no-build-isolation --no-deps --system -v
-      - name: Run Tests
+      - name: Run Tests (Unix/macOS)
         run: pytest tests/ -v
 
   tests_complete:
