--- a/src/nanobind/CMakeLists.txt
+++ b/src/nanobind/CMakeLists.txt
@@ -1,3 +1,25 @@
+# ISPC library for SIMD-optimized PGOP computations
+add_library(spatula_ispc OBJECT
+    ../computes/pgop_gaussian.ispc
+)
+
+# Set ISPC target based on architecture using compile options
+# The ISPC_TARGETS property doesn't work reliably, so we use target_compile_options
+if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|AMD64|amd64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "Intel")
+    # Target AVX2 for x86_64 (8-wide float SIMD)
+    target_compile_options(spatula_ispc PRIVATE "--target=avx2-i32x8")
+    message(STATUS "x86_64 detected: ISPC targeting avx2-i32x8")
+elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "arm64|aarch64")
+    # Use native ARM NEON target (4-wide float SIMD)
+    target_compile_options(spatula_ispc PRIVATE "--target=neon-i32x4")
+    message(STATUS "ARM detected: ISPC targeting neon-i32x4")
+endif()
+
+# Generate header file for C++ integration
+set_target_properties(spatula_ispc PROPERTIES
+    ISPC_HEADER_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
+)
+
 nanobind_add_module(_spatula_nb
     export.cc
     export-threads.h
@@ -7,6 +29,9 @@ nanobind_add_module(_spatula_nb
     ../util/QlmEval.cc
 )
 
+# Link ISPC object library
+target_link_libraries(_spatula_nb PRIVATE spatula_ispc)
+
 target_include_directories(
     _spatula_nb
     PRIVATE
@@ -14,6 +39,7 @@ target_include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/../data
     ${CMAKE_CURRENT_SOURCE_DIR}/../optimize
     ${CMAKE_CURRENT_SOURCE_DIR}/..
+    ${CMAKE_CURRENT_BINARY_DIR}  # For generated ISPC header
 )
 
 set_target_properties(_spatula_nb PROPERTIES
