--- a/src/nanobind/CMakeLists.txt
+++ b/src/nanobind/CMakeLists.txt
@@ -1,33 +1,39 @@
-# ISPC library for SIMD-optimized PGOP computations
-add_library(spatula_ispc OBJECT
-    ../computes/pgop_gaussian.ispc
-    ../computes/pgop_fisher.ispc
-)
+# ISPC configuration is set in root CMakeLists.txt
 
-# Detect ISPC architecture (see https://github.com/ispc/ispc/blob/main/examples/cpu/cmake/AddISPCExampleModern.cmake)
-if(NOT ISPC_ARCH)
-    if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|AMD64|amd64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "Intel")
-        set(ispc_arch "x86-64")
-    elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "arm64|aarch64")
-        set(ispc_arch "aarch64")
-    elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "arm")
-        set(ispc_arch "arm")
-    elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "i686|i386")
-        set(ispc_arch "x86")
+if(ENABLE_ISPC)
+    # ISPC library for SIMD-optimized PGOP computations
+    add_library(spatula_ispc OBJECT
+        ../computes/pgop_gaussian.ispc
+        ../computes/pgop_fisher.ispc
+    )
+
+    # Detect ISPC architecture (see https://github.com/ispc/ispc/blob/main/examples/cpu/cmake/AddISPCExampleModern.cmake)
+    if(NOT ISPC_ARCH)
+        if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|AMD64|amd64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "Intel")
+            set(ispc_arch "x86-64")
+        elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "arm64|aarch64")
+            set(ispc_arch "aarch64")
+        elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "arm")
+            set(ispc_arch "arm")
+        elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "i686|i386")
+            set(ispc_arch "x86")
+        endif()
+        set(ISPC_ARCH "${ispc_arch}" CACHE STRING "ISPC target architecture")
     endif()
-    set(ISPC_ARCH "${ispc_arch}" CACHE STRING "ISPC target architecture")
+
+    # ISPC will automatically select the correct SIMD instruction set if available
+    message(STATUS "ISPC architecture: ${ISPC_ARCH}, targets: ${ISPC_TARGETS}")
+    set_property(TARGET spatula_ispc PROPERTY ISPC_INSTRUCTION_SETS "${ISPC_TARGETS}")
+    target_compile_options(spatula_ispc PRIVATE "$<$<COMPILE_LANGUAGE:ISPC>:--arch=${ISPC_ARCH}>")
+
+    # Generate header file(s) for C++ integration
+    set_target_properties(spatula_ispc PROPERTIES
+        ISPC_HEADER_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
+        POSITION_INDEPENDENT_CODE ON
+    )
+else()
+    message(STATUS "ISPC disabled - using scalar fallback implementations")
 endif()
-
-# ISPC will automatically select the correct SIMD instruction set if available
-message(STATUS "ISPC architecture: ${ISPC_ARCH}, targets: ${ISPC_TARGETS}")
-set_property(TARGET spatula_ispc PROPERTY ISPC_INSTRUCTION_SETS "${ISPC_TARGETS}")
-target_compile_options(spatula_ispc PRIVATE "$<$<COMPILE_LANGUAGE:ISPC>:--arch=${ISPC_ARCH}>")
-
-# Generate header file(s) for C++ integration
-set_target_properties(spatula_ispc PROPERTIES
-    ISPC_HEADER_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
-    POSITION_INDEPENDENT_CODE ON
-)
 
 nanobind_add_module(_spatula_nb
     export.cc
@@ -38,8 +44,10 @@ nanobind_add_module(_spatula_nb
     ../util/QlmEval.cc
 )
 
-# Link ISPC object library
-target_link_libraries(_spatula_nb PRIVATE spatula_ispc)
+# Link ISPC object library (if enabled)
+if(ENABLE_ISPC)
+    target_link_libraries(_spatula_nb PRIVATE spatula_ispc)
+endif()
 
 target_include_directories(
     _spatula_nb
@@ -48,8 +56,13 @@ target_include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/../data
     ${CMAKE_CURRENT_SOURCE_DIR}/../optimize
     ${CMAKE_CURRENT_SOURCE_DIR}/..
-    ${CMAKE_CURRENT_BINARY_DIR}  # For generated ISPC header
 )
+
+# Add ISPC header directory only if ISPC is enabled
+if(ENABLE_ISPC)
+    target_include_directories(_spatula_nb PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
+    target_compile_definitions(_spatula_nb PRIVATE SPATULA_HAS_ISPC=1)
+endif()
 
 set_target_properties(_spatula_nb PROPERTIES
     CXX_STANDARD 20
