--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -52,6 +52,7 @@ jobs:
         uses: pypa/cibuildwheel@298ed2fb2c105540f5ed055e8a6ad78d82dd3a7e # v3.3.1
         env:
           CIBW_BUILD: "${{ matrix.python.version }}-*"
+          CIBW_ARCHS_WINDOWS: AMD64
           CIBW_TEST_REQUIRES: pytest==8.4.2 numpy==${{ matrix.python.oldest_numpy }} pytest-rerunfailures==16.0.1 coxeter==0.10.0
 
       - uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
