update cmake for abi3.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.19...3.30)
+cmake_minimum_required(VERSION 3.26...3.30)
 project(spatula LANGUAGES CXX)
 
 # Option to disable ISPC (must be set before enable_language)
@@ -16,12 +16,6 @@ if(ENABLE_ISPC)
     endif()
 endif()
 
-if (CMAKE_VERSION VERSION_LESS 3.18)
-  set(DEV_MODULE Development)
-else()
-  set(DEV_MODULE Development.Module)
-endif()
-
 set(DEFAULT_BUILD_TYPE Release)
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE ${DEFAULT_BUILD_TYPE})
@@ -33,7 +27,17 @@ if (UNIX)
 endif (UNIX)
 
 
-find_package(Python COMPONENTS Interpreter ${DEV_MODULE} REQUIRED)
+find_package(
+    Python 3.12
+    COMPONENTS Interpreter Development.Module Development.SABIModule
+    REQUIRED
+)
+if((NOT Python_INTERPRETER_ID STREQUAL "Python") OR (NOT TARGET Python::SABIModule))
+    message(
+        SEND_ERROR
+        "Cannot activate stable ABI build: Interpreter ${Python_INTERPRETER_ID}, SABI: ${Python_SABI_LIBRARIES}"
+    )
+endif()
 find_package(nanobind CONFIG REQUIRED)
 
 include_directories(${PROJECT_SOURCE_DIR}/dependencies)
