--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [build-system]
-requires = ["scikit-build-core", "nanobind"]
+requires = ["numpy>=2.0.0", "scikit-build-core", "nanobind>=2.0.0"]
 build-backend = "scikit_build_core.build"
 
 
 [project]
 name = "spatula-analysis"
 version = "0.1.1"
-requires-python = ">=3.10"
+requires-python = ">=3.12"
 description = "Point group symmetry analysis of local environments for point cloud data."
 readme = "README.rst"
 license = "BSD-3-Clause"
@@ -16,8 +16,6 @@ classifiers = [
         "Development Status :: 4 - Beta",
         "Natural Language :: English",
         "Programming Language :: Python :: 3",
-        "Programming Language :: Python :: 3.10",
-        "Programming Language :: Python :: 3.11",
         "Programming Language :: Python :: 3.12",
         "Programming Language :: Python :: 3.13",
         "Programming Language :: Python :: 3.14",
@@ -58,4 +56,6 @@ ignore = ["B905","D107","D213","D211","E741","S101","UP006","SIM116","D203"]
 "docs/source/conf.py" = ["D100"]
 
 [tool.scikit-build]
+sdist.exclude = [".github", "docs"]
 wheel.packages = ["spatula"]           # copy the whole Python package folder into the wheel
+wheel.py-api = "cp312"
