--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,27 @@ Download = "https://pypi.org/project/spatula-analysis/"
 Source = "https://github.com/glotzerlab/spatula"
 Issues = "https://github.com/glotzerlab/spatula/issues"
 
+[tool.cibuildwheel]
+archs = ["auto64"]
+skip = ["pp*","*musllinux*","cp3??t-*"]
 
+# Use abi3audit to catch issues with Limited API wheels
+[tool.cibuildwheel.linux]
+repair-wheel-command = [
+  "auditwheel repair -w {dest_dir} {wheel}",
+  "pipx run abi3audit --strict --verbose {wheel}",
+]
+
+[tool.cibuildwheel.macos]
+repair-wheel-command = [
+  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}",
+  "pipx run abi3audit --strict --verbose {wheel}",
+]
+[tool.cibuildwheel.windows]
+repair-wheel-command = [
+  "copy {wheel} {dest_dir}",
+  "pipx run abi3audit --strict --verbose {wheel}",
+]
 [tool.ruff]
 line-length = 88
 
